fix hero container size on mobile V.1

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,7 @@ html {
 }
 
 body {
+  overflow-y: hidden;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
